# gval

./: .buildinfo  .coveragerc  .gitignore  .pre-commit-config.yaml  .pymon  CHANGELOG.md  CITATION.cff  CONTRIBUTING.MD  Dockerfile  LICENSE.MD  README.MD  REFERENCES.bib  SphinxCatalogTutorial.html  SphinxContinuousTutorial.html  SphinxMulticatTutorial.html  SphinxSubsamplingTutorial.html  SphinxTutorial.html  TERMS.MD  api.html  catalog.html  categorical_stat_funcs.html  categorical_statistics.html  comparison.html  compute_comparison.html  config.py  continuous_stat_funcs.html  continuous_statistics.html  contributing.html  exceptions.html  extension.html  genindex.html  gval_array.html  gval_dataframe.html  gval_dataset.html  gval_xarray.html  index.html  loading_datasets.html  monitordb  noxfile.py  objects.inv  (+14 more)
.doctrees/: SphinxCatalogTutorial.doctree  SphinxContinuousTutorial.doctree  SphinxMulticatTutorial.doctree  SphinxSubsamplingTutorial.doctree  SphinxTutorial.doctree  api.doctree  catalog.doctree  categorical_stat_funcs.doctree  categorical_statistics.doctree  comparison.doctree  compute_comparison.doctree  continuous_stat_funcs.doctree  continuous_statistics.doctree  contributing.doctree  environment.pickle  exceptions.doctree  extension.doctree  gval_array.doctree  gval_dataframe.doctree  gval_dataset.doctree  gval_xarray.doctree  index.doctree  loading_datasets.doctree  pairing_functions.doctree  schemas.doctree  statistics.doctree  subsampling.doctree  tutorials.doctree  utils.doctree
.doctrees/nbsphinx/: SphinxContinuousTutorial.ipynb  SphinxMulticatTutorial.ipynb
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml
_sources/: api.rst.txt  categorical_statistics.rst.txt  comparison.rst.txt  compute_comparison.rst.txt  contributing.rst.txt  exceptions.rst.txt  extension.rst.txt  gval_array.rst.txt  gval_dataset.rst.txt  gval_xarray.rst.txt  index.rst.txt  pairing_functions.rst.txt  statistics.rst.txt  tutorials.rst.txt  utils.rst.txt
data/: readme.md
docs/: compile_readme.py  compile_readme_and_arrange_docs.py
docs/markdown/: 01_INTRO.MD  02_ISSUES.MD  03_INSTALL.MD  04_DEPENDENCIES.MD  04_EXAMPLE.MD  05_CONTRIBUTING.MD  06_SECURITY.MD  09_CITATION.MD
docs/sphinx/: Makefile  PYPI_README.MD  SPHINX_CONTRIBUTING.MD  SPHINX_README.MD  SphinxCatalogTutorial.ipynb  SphinxContinuousTutorial.ipynb  SphinxSubsamplingTutorial.ipynb  SphinxTutorial.ipynb  api.rst  base_statistics.rst  catalog.rst  categorical_stat_funcs.rst  conf.py  continuous_stat_funcs.rst  continuous_statistics.rst  extension.rst  gval_dataframe.rst  index.rst  loading_datasets.rst  schemas.rst  statistics.rst  subsampling.rst  tutorials.rst  utils.rst  visualize.rst
gval/: __init__.py  compare.py  convenience_functions.py
gval/homogenize/: spatial_alignment.py
gval/outputs/: agreement_map.py  encodings.py
gval/prep_comparison/: discretize_maps.py  spatial_alignment.py
gval/utils/: exceptions.py  loading_datasets.py  misc_utils.py
notebooks/: Catalog Tutorial.ipynb  Continuous Comparison Tutorial.ipynb  Multi-Class Categorical Statistics.ipynb  Subsampling Tutorial.ipynb  Tutorial.ipynb  benchmark_catalog_0.csv  benchmark_catalog_1.csv  benchmark_categorical_0.tif  benchmark_categorical_1.tif  benchmark_continuous_0.tif  benchmark_continuous_1.tif  benchmark_map_multi_categorical.tif  benchmark_map_multiband_two_class_categorical.tif  benchmark_map_two_class_categorical.tif  candidate_catalog_0.csv  candidate_catalog_1.csv  candidate_categorical_0.tif  candidate_categorical_1.tif  candidate_continuous_0.tif  candidate_continuous_1.tif  candidate_map_multi_categorical.tif  candidate_map_two_class_categorical.tif  candidate_raw_elevation_multi_categorical.tif  livneh_2011_precip.tif  prism_2011_precip.tif  subsample_continuous_polygons.gpkg  subsample_two-class_polygons.gpkg  target_map_two_class_categorical.tif
requirements/: base.txt  test.txt
src/gval/: __init__.py  compare.py
src/gval/accessors/: gval_array.py  gval_dataframe.py  gval_dataset.py  gval_xarray.py
src/gval/attributes/: attributes.py
src/gval/catalogs/: catalogs.py
src/gval/comparison/: __init__.py  agreement.py  compute_categorical_metrics.py  compute_comparison.py  compute_continuous_metrics.py  compute_probabilistic_metrics.py  pairing_functions.py  tabulation.py
src/gval/homogenize/: numeric_alignment.py  rasterize.py  spatial_alignment.py  vectorize.py
src/gval/statistics/: base_statistics.py  categorical_stat_funcs.py  categorical_statistics.py  continuous_stat_funcs.py  continuous_stat_utils.py  continuous_statistics.py  multi_categorical_stat_funcs.py
src/gval/subsampling/: subsampling.py
src/gval/utils/: exceptions.py  loading_datasets.py  misc_utils.py  schemas.py  visualize.py
tests/: cases_accessors.py  cases_attributes.py  cases_catalogs.py  cases_compare.py  cases_compute_categorical_metrics.py  cases_compute_continuous_metrics.py  cases_compute_probabilistic_metrics.py  cases_continuous_metrics.py  cases_homogenize.py  cases_load_xarray.py  cases_spatial_alignment.py  cases_stac.py  cases_statistics.py  cases_subsampling.py  cases_visualization.py  conftest.py  local_benchmark.py  remote_benchmark.py  test_accessors.py  test_attributes.py  test_catalogs.py  test_compare.py  test_compute_categorical_metrics.py  test_compute_continuous_metrics.py  test_compute_probabilistic_metrics.py  test_continuous_metrics.py  test_homogenize.py  test_load_xarray.py  test_spatial_alignment.py  test_stac.py  test_statistics.py  test_subsampling.py  test_unit.py  test_visualization.py  unit.py  utils.py
tests/data_generation/: cogify.py  data_tests.py  push_to_s3.py
