[build-system]
requires = ['setuptools>=42']
build-backend = 'setuptools.build_meta'

[project]
name = 'gval'
description = "Flexible, portable, and efficient geospatial evaluations for a variety of data."
authors = [
    {name = "Fernando Aristizabal", email = "fernando.aristizabal@noaa.gov"},
    {name = "Gregory Petrochenkov", email = "gregory.petrochenkov@noaa.gov"}
]
requires-python = ">=3.8"
keywords = ["geospatial", "evaluations"]
license = {text = "MIT"}
version = "0.2.4"
dynamic = ["readme", "dependencies"]


[project.optional-dependencies]
dev = ["pytest==7.2.2",
    "pytest-benchmark==4.0.0",
    "pytest-cov==4.1.0",
    "pytest-cases==3.6.14",
    "flake8==6.0.0",
    "flake8-black==0.3.6",
    "allure-pytest==2.13.2",
    "jupyter==1.0.0",
    "sphinx==6.2.1",
    "pytest-memray==1.4.1",
    "pytest-monitor==1.6.6",
    "sphinx-rtd-theme==1.2.2",
    "pre-commit==3.3.3",
    "boto3==1.26.164",
    "myst_parser==2.0.0",
    "nbsphinx==0.9.2",
    "sqlalchemy==2.0.17",
    "colorama==0.4.6",
    "build==0.10.0",
    "twine==4.0.2",
    "deepdiff==6.7.1"
]

[project.urls]
Repository = "https://github.com/NOAA-OWP/gval"
Homepage = "https://noaa-owp.github.io/gval/"



[tool.setuptools.dynamic]
dependencies = {file = ["./requirements/base.txt"]}
readme = {file = ["./docs/sphinx/PYPI_README.MD"], content-type = "text/markdown"}
